# Signal

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PUBLISHING_CHECKLIST.md  README.md  SPECS.md
apps/api/: pyproject.toml
apps/api/app/: auth.py  chat.py  db.py  files.py  main.py  middleware.py  projects.py  routers_auth.py  routers_models.py  runner.py  settings.py  utils.py
apps/api/app/agent/: agent.py  tools.py
apps/api/scripts/: test_chat.py
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/[id]/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/project/[id]/: page.tsx
apps/web/components/admin/: CreateUserDialog.tsx  ManageModelsDialog.tsx
apps/web/components/chat/: ChatPanel.tsx
apps/web/components/dash/: DashIframe.tsx
apps/web/components/editor/: MonacoEditor.tsx
apps/web/components/files/: FilesPane.tsx
apps/web/components/gallery/: NewProjectDialog.tsx  ProjectCard.tsx
apps/web/components/history/: VersionHistory.tsx  VersionNav.tsx
apps/web/components/ui/: tooltip.tsx
apps/web/lib/: api.ts  auth.ts  utils.ts
templates/: dash_app.py
